--- a/www.torino-international.com/registration.html
+++ b/www.torino-international.com/registration.html
@@ -171,12 +171,12 @@
 <style data-href="https://static.parastorage.com/services/wix-thunderbolt/dist/group_7.3fc73946.chunk.min.css">.TWFxr5{height:auto!important}</style>
 <title>Registration | Torino-International</title>
   <link rel="canonical" href="./registration.html">
-  <meta property="og:title" content="Registration | Torino-International">
+  <meta property="og:title" content="Registration | bHIB global">
   <meta property="og:url" content="https://www.torino-international.com/registration">
-  <meta property="og:site_name" content="Torino-International">
+  <meta property="og:site_name" content="bHIB global">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Registration | Torino-International">
+  <meta name="twitter:title" content="Registration | bHIB global">
 
 
 </head>
